force-app/main/default/objects/Investment_Type__c/Investment_Type__c.object-meta.xml
<CustomObject>
    <description>This Object stores the configurable Investment Types.</description>
    <label>Investment Type</label>
    <nameField>
        <label>Investment Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>