force-app/main/default/objects/Investment_Type__c/fields/Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution__c</fullName>
    <label>Financial Institution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groww</fullName>
            </value>
            <value>
                <fullName>State Bank of India (SBI)</fullName>
            </value>
            <value>
                <fullName>Andhra Pragati Grameena Bank (APGB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>