force-app/main/default/objects/Investment_Type__c/fields/Is_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Is_Tax_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tax-Free?</label>
    <type>Checkbox</type>
</CustomField>