force-app/main/default/objects/Investment_Type__c/fields/Lock_In_Period__c.field-meta.xml
<CustomField>
    <fullName>Lock_In_Period__c</fullName>
    <label>Lock-In Period (Years)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>