force-app/main/default/objects/Investment_Type__c/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <label>Max Amount (Yearly)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>