force-app/main/default/objects/Investment_Type__c/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <label>Min Amount (Yearly)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>