force-app/main/default/objects/Investment_Type__c/fields/ROI_Expected_Rate_of_Returns__c.field-meta.xml
<CustomField>
    <fullName>ROI_Expected_Rate_of_Returns__c</fullName>
    <label>ROI/Expected Rate of Returns</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>