force-app/main/default/objects/Investment_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Financial_Institution__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Maturity_Date__c</columns>
    <columns>Lock_In_Period__c</columns>
    <columns>ROI_Expected_Rate_of_Returns__c</columns>
    <columns>Status__c</columns>
    <columns>Risk_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>